Extending Konto entities, service, controller and tests.